//
//  Const.swift
//  PenzaAuto
//
//  Created by gitlab on 29/07/2019.
//  Copyright © 2019 gitlab. All rights reserved.
//

import Foundation

enum Consts {
    static let loginSuccessful = "Вход выполнен успешно"
    static let nibNameFirstScreen = "ViewController"
    static let nibNameSecondScreen = "ForumViewController"
    static let adminName = "Volnikov"
    static let adminPassword = "1234"
    static let incorrectPasswordEntered = "Введен некорректный пароль"
    static let userName = "Platon"
    static let userPassword = "1234"
    static let loginFailed = "Ошибка входа"
    static let nameTrue = "True"
    static let nameLogin = "login"
    static let namePassword = "pass"
    static let nameSUCCESS = "SUCCESS"
    static let nameLocalHost = "http://localhost:4567/post"
    static let getTopicsUrl = "http://localhost:4567/getTopics"
    static let cgrectX = 0
    static let cgrectY = 0
    static let cgrectWight = 50
    static let cgrectHeight = 50
    static let stringAdmin = "admin"
    static let stringUsers = "users"
    static let nibNameRegScreen = "Regestration"
}
